// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableRows> default snapshot 1`] = `
<tr
  class="TableQL-tr"
>
  <td
    class="TableQL-td"
    data-label="author"
  >
    Austen, Jane
  </td>
  <td
    class="TableQL-td"
    data-label="title"
  >
    Northanger Abbey
  </td>
  <td
    class="TableQL-td"
    data-label="id"
  >
    63a32284072b2e31190bd81d
  </td>
  <td
    class="TableQL-td"
    data-label="edition"
  >
    Penguin
  </td>
  <td
    class="TableQL-td"
    data-label="price"
  >
    18.2
  </td>
  <td
    class="TableQL-td"
    data-label="yearWritten"
  >
    1814
  </td>
</tr>
`;

exports[`<TableRows> when columns config passed 1`] = `
<tr
  class="TableQL-tr"
>
  <td
    class="TableQL-td"
    data-label="author"
  >
    Austen, Jane
  </td>
  <td
    class="TableQL-td"
    data-label="title"
  >
    Northanger Abbey
  </td>
</tr>
`;
